--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a class="logo-style"  href="#"><span class="web-style">Web</span><span>Studio</span></a> 
         <nav>
           <ul class="link-header-style">
-            <li> <a class="link current" href="studio.html" target="_parent">Studio</a> </li>
+            <li> <a class="link current" href="index.html" target="_parent">Studio</a> </li>
             <li> <a class="link" href="portofolio.html" target="_blank">Portfolio</a></li>
             <li> <a class="link" href="#" target="_blank">Contacts</a></li>
            </ul>
