--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav>
           <ul class="link-header-style">
             <li> <a class="link current" href="index.html" target="_parent">Studio</a> </li>
-            <li> <a class="link" href="portofolio.html" target="_blank">Portfolio</a></li>
-            <li> <a class="link" href="#" target="_blank">Contacts</a></li>
+            <li> <a class="link" href="portofolio.html" target="_parent">Portfolio</a></li>
+            <li> <a class="link" href="#" target="_parent">Contacts</a></li>
            </ul>
         </nav>
 
