--- a/portofolio.html
+++ b/portofolio.html
@@ -15,9 +15,9 @@
         <a class="logo-style" href="#"><span class="web-style">Web</span><span>Studio</span></a> 
           <nav>
             <ul class="link-header-style">
-              <li> <a class="link" href="studio.html" target="_blank">Studio</a> </li>
-              <li> <a class="link current" href="portofolio.html" target="_blank">Portfolio</a></li>
-              <li> <a class="link" href="#" target="_blank">Contacts</a></li>
+              <li> <a class="link" href="index.html" target="_parent">Studio</a> </li>
+              <li> <a class="link current" href="portofolio.html" target="_parent">Portfolio</a></li>
+              <li> <a class="link" href="#" target="_parent">Contacts</a></li>
              </ul>
           </nav>
   
