--- a/portofolio.html
+++ b/portofolio.html
@@ -89,7 +89,7 @@
   
   <!--footer section-->
   <footer class="footer-style">
-    <a class="logo-style" href="#"><span class="web-style">Web</span><span class="footer-studio-style">Studio</span></a> 
+    <a class="footer-logo-style" href="#"><span class="web-style">Web</span><span class="footer-studio-style">Studio</span></a> 
       
       <address>
         <div class="adr1"> <span class="street-style">695 Park Ave, NY 10065, USA</span></div>
@@ -101,7 +101,6 @@
       <div class="adr3"><a class="footer-contact" href="tel:+1212-772-4150">+1 212-772-4150</a> </div>
           
       </address> 
-      </div>
     </footer>
 </body>
 </html>
